syntax = "proto3";

service SyncService {
}
